Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19352

qmake does not put rcc dependencies into Makefile when source and output paths don't have the same number of / in them

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.1.1
    • 4.7.3
    • Build tools: qmake
    • None
    • f57e2f5667c1eb72b5cbe3ad650dac2f6ca4f8a0

      Consider the attached simple example.

      If you run qmake on this project when the source and output paths have the same number of / in them, the rcc dependencies (ie. that qrc_resources.cpp depends on main.qml) are properly recorded in the Makefile. This includes both in-source and shadow building.

      However, when the source and output paths have a different number of / in them, the dependency between qrc_resources.cpp and main.qml is not written into the Makefile.

      Checked using qt.git/4.7.

        1. test.tgz
          0.5 kB
          Lincoln Ramsay (closed Nokia identity)
        For Gerrit Dashboard: QTBUG-19352
        # Subject Branch Project Status CR V

            buddenha Oswald Buddenhagen
            lramsay Lincoln Ramsay (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes